--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
 spring.application.name=Bilgisayar_1
 server.port=8081
-#
-#spring.datasource.url=jdbc:postgresql://localhost:5432/Jatakana
-#spring.datasource.username=postgres
-#spring.datasource.password=nurskanyb
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto = create
-#
-#
-#room=15
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/Bilgisayar1MYOJava
+spring.datasource.username=postgres
+spring.datasource.password=nurskanyb
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto = create
+
