--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.application.name=Bilgisayar_1
 server.port=8081
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/Bilgisayar1MYOJava
-spring.datasource.username=postgres
-spring.datasource.password=nurskanyb
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto = create
+#spring.datasource.url=jdbc:postgresql://localhost:5432/Bilgisayar1MYOJava
+#spring.datasource.username=postgres
+#spring.datasource.password=nurskanyb
+#spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/table_myo1
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto = update
 
